@@ -27,6 +27,7 @@
 #    include "bindings/entity/ScEntity.hpp"
 #    include "bindings/entity/ScGuest.hpp"
 #    include "bindings/entity/ScLitter.hpp"
+#    include "bindings/entity/ScParticle.hpp"
 #    include "bindings/entity/ScPeep.hpp"
 #    include "bindings/entity/ScStaff.hpp"
 #    include "bindings/entity/ScVehicle.hpp"
@@ -433,6 +434,7 @@ void ScriptEngine::Initialise()
     ScEntity::Register(ctx);
     ScLitter::Register(ctx);
     ScVehicle::Register(ctx);
+    ScCrashedVehicleParticle::Register(ctx);
     ScPeep::Register(ctx);
     ScGuest::Register(ctx);
     ScThought::Register(ctx);
